<resources>
    <string name="app_name">gasolineCalc_CEN4360_ChristopherVotoe</string>
    <string name="jerrycan_picture">Jerrycan Picture</string>
    <string name="gasoline">Gasoline</string>
    <string name="calculator">Calculator</string>
    <string name="distance">Distance</string>
    <string name="cost_per_gallon">Cost Per Gallon</string>
    <string name="highway_mpg">Highway MPG</string>
    <string name="aggressive_driver">Aggressive Driver?</string>
    <string name="need_a_c">Need A/C?</string>
    <string name="road_type">Road Type</string>
    <string name="average_speed">Average Speed</string>
    <string name="calculate">Calculate</string>
    <string name="please_enter_the_distance">Please enter the distance</string>
    <string name="please_enter_the_cost_per_gallon">Please enter the cost per gallon</string>
    <string name="please_enter_the_vehicle_highway_mpg">Please enter the vehicle highway MPG</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="you_ll_need_to_spend_this_much_on_a_round_trip">You\'ll need to spend this\n   much on a round trip:</string>
    <string name="_35">35</string>
    <string name="_0_00">$0.00</string>
    <string-array name="roadtype">
        <item>Highway</item>
        <item>City</item>
        <item>Mixed</item>
    </string-array>

</resources>