<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/jerryCan"
        android:layout_width="109dp"
        android:layout_height="106dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/jerrycan_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/jerrycan_foreground" />

    <ImageView
        android:id="@+id/jerryCan2"
        android:layout_width="109dp"
        android:layout_height="106dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/jerrycan_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/jerrycan_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gasoline"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/jerryCan2"
        app:layout_constraintStart_toStartOf="@+id/jerryCan"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="60dp"
        android:text="@string/calculator"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="170dp" />

    <TextView
        android:id="@+id/CPGallon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_per_gallon"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/HMPG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highway_mpg"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="242dp" />

    <TextView
        android:id="@+id/AggDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aggressive_driver"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="277dp" />

    <TextView
        android:id="@+id/AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_a_c"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="323dp" />

    <TextView
        android:id="@+id/RoadT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/road_type"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="361dp" />

    <TextView
        android:id="@+id/AvgSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="404dp" />

    <Button
        android:id="@+id/Calculate_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="506dp" />

</androidx.constraintlayout.widget.ConstraintLayout>